# peer-x

./: .gitignore  LICENSE.txt  README.md  main.py  pyproject.toml  tox.ini
.github/workflows/: tests.yml
configs/: config.yaml
configs/datamodule/: MoNuSeg.yaml
configs/logger/: tensorboard.yaml
configs/post_processing/: default.yaml
configs/trainer/: default.yaml
docs/: requirements.txt
docs/source/: conf.py  doku.rst  index.rst  intro.md  quickstart.md
scripts/: post_processing_pipeline.py
src/peer_x/: utils.py
src/peer_x/data/: data_module.py
src/peer_x/task/: detection.py
src/peer_x/workflow/: supervised.py
tests/: test_utils.py
